[tool.poetry]
name = "anonymous-chat"
version = "0.1.0"
description = ""
authors = ["Iskander Shamsutdinov <wensietyt@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
websockets = "^13.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
